add wbr & media queries title, sub title.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body class="container-fluid d-flex flex-column min-vh-100">
         <header class="text-center">
             <H1>L'atelier des eaux</H1>
-            <p>Communication visuelle pour particulier et entreprise</p>
+            <p>Communication visuelle pour <wbr>particulier et entreprise</p>
         </header>
         <content>
             <div class="row justify-content-center">
