--- a/index.html
+++ b/index.html
@@ -8,75 +8,120 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="style.css" rel="stylesheet">
     </head>
-    <body class="container-fluid d-flex flex-column min-vh-100">
-        <header class="text-center">
-            <H1>L'atelier des eaux</H1>
-            <p>Communication visuelle pour <wbr>particulier et entreprise</p>
-        </header>
-        <content>
-            <div class="row justify-content-center">
-                <div id="carouselExampleCaptions" class="carousel slide col-12 col-lg-8 col-xxl-6 p-0" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <body>
+        <!-- firs section -->
+        <div class="container-fluid d-flex flex-column min-vh-100" id="first-section">
+            <header class="text-center">
+                <h1>L'atelier des eaux</h1>
+                <p>Communication visuelle pour <wbr>particulier et entreprise</p>
+            </header>
+            <section>
+                <div class="row justify-content-center">
+                    <div id="carouselExampleCaptions" class="carousel slide col-12 col-lg-8 col-xxl-5 p-0" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                            <img src="img/img1.webp" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for the first slide.</p>
+                            </div>
+                            </div>
+                            <div class="carousel-item">
+                            <img src="img/img2.webp" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                            </div>
+                            <div class="carousel-item">
+                            <img src="img/img3.webp" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                            </div>
+                            <div class="carousel-item">
+                            <img src="img/img4.webp" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Fourth slide label</h5>
+                                <p>Some representative placeholder content for the Fourth slide.</p>
+                            </div>
+                            </div>
+                            <div class="carousel-item">
+                            <img src="img/img5.webp" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Five slide label</h5>
+                                <p>Some representative placeholder content for the Five slide.</p>
+                            </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                        <img src="img/img1.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                        </div>
-                        </div>
-                        <div class="carousel-item">
-                        <img src="img/img2.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                        </div>
-                        <div class="carousel-item">
-                        <img src="img/img3.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                        </div>
-                        <div class="carousel-item">
-                        <img src="img/img4.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Fourth slide label</h5>
-                            <p>Some representative placeholder content for the Fourth slide.</p>
-                        </div>
-                        </div>
-                        <div class="carousel-item">
-                        <img src="img/img5.webp" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Five slide label</h5>
-                            <p>Some representative placeholder content for the Five slide.</p>
-                        </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
-            </div>
-            <div class="row text-center mt-5" id="coord">
-                <h4>Marie Le Goff</h4>
-                <p>Gueltas, 56930 Pluméliau-Bieuzy<br>latelierdeseaux@hotmail.com - 06 04 46 44 85<br><span>Ouvert du lundi au vendredi de 8h30 à 18h00</span></p>
-            </div>
-        </content>
-        <footer class="row text-center mt-auto">
-            <p><em>ici un footer de c'est mort</em></p>
+                <div class="row text-center mt-5" id="coord">
+                    <h4>Marie Le Goff</h4>
+                    <p>Gueltas, 56930 Pluméliau-Bieuzy<br>latelierdeseaux@hotmail.com - 06 04 46 44 85<br><span>Ouvert du lundi au vendredi de 8h30 à 18h00</span></p>
+                </div>
+            </section>
+        </div>
+
+        <!-- second section -->
+        <div class="container-fluid d-flex flex-column min-vh-100" id="second-section">
+            <h3 class="text-center mt-5">Exemples de mise en page</h3>
+            <section class="row bg-light">
+                <div class="col-12 col-md-6 text-center my-4">
+                    <img src="https://fakeimg.pl/300/" class="img-fluid">
+                </div>
+                <div class="col-12 col-md-6 my-4">
+                    <h4 class="text-center mb-4">Style 1</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </section>
+            <section class="row flex-sm-column-reverse flex-md-row">
+                <div class="col-12 col-md-6 my-4">
+                    <h4 class="text-center mb-4">Style 2</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="col-12 col-md-6 text-center my-4">
+                    <img src="https://fakeimg.pl/300/" class="img-fluid">
+                </div>
+            </section>
+            <section class="row bg-light">
+                <div class="col-12 col-md-6 text-center my-4">
+                    <img src="https://fakeimg.pl/300/" class="img-fluid">
+                </div>
+                <div class="col-12 col-md-6 my-4">
+                    <h4 class="text-center mb-4">Style 3</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </section>
+            <section class="row flex-sm-column-reverse flex-md-row">
+                <div class="col-12 col-md-6 my-4">
+                    <h4 class="text-center mb-4">Style 4</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="col-12 col-md-6 text-center my-4">
+                    <img src="https://fakeimg.pl/300/" class="img-fluid">
+                </div>
+            </section>
+        </div>
+
+        <footer class="container-fluid d-flex flex-column text-center fixed-bottom">
+            <p class="my-auto"><em>ici un footer de c'est mort</em></p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
