--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>L'atelier des eaux</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="style.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="img/logo.png" />
     </head>
     <body>
         <!-- firs section -->
@@ -17,56 +18,56 @@
             </header>
             <section>
                 <div class="row justify-content-center">
-                    <div id="carouselExampleCaptions" class="carousel slide col-12 col-lg-8 col-xxl-5 p-0" data-bs-ride="carousel">
+                    <div id="carousel" class="carousel slide col-12 col-lg-8 col-xxl-5 p-0" data-bs-ride="carousel">
                         <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                            <img src="img/img1.webp" class="d-block w-100" alt="...">
+                            <img src="img/img1.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>First slide label</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                             </div>
                             </div>
                             <div class="carousel-item">
-                            <img src="img/img2.webp" class="d-block w-100" alt="...">
+                            <img src="img/img2.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Second slide label</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
                             </div>
                             </div>
                             <div class="carousel-item">
-                            <img src="img/img3.webp" class="d-block w-100" alt="...">
+                            <img src="img/img3.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Third slide label</h5>
                                 <p>Some representative placeholder content for the third slide.</p>
                             </div>
                             </div>
                             <div class="carousel-item">
-                            <img src="img/img4.webp" class="d-block w-100" alt="...">
+                            <img src="img/img4.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Fourth slide label</h5>
                                 <p>Some representative placeholder content for the Fourth slide.</p>
                             </div>
                             </div>
                             <div class="carousel-item">
-                            <img src="img/img5.webp" class="d-block w-100" alt="...">
+                            <img src="img/img5.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Five slide label</h5>
                                 <p>Some representative placeholder content for the Five slide.</p>
                             </div>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
@@ -78,7 +79,6 @@
                 </div>
             </section>
         </div>
-
         <!-- second section -->
         <div class="container-fluid d-flex flex-column min-vh-100" id="second-section">
             <h3 class="text-center mt-5">Exemples de mise en page</h3>
@@ -119,7 +119,7 @@
                 </div>
             </section>
         </div>
-
+        <!-- footer section -->
         <footer class="container-fluid d-flex flex-column text-center fixed-bottom">
             <p class="my-auto"><em>ici un footer de c'est mort</em></p>
         </footer>
