second section h3 add margin bottom

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <!-- second section -->
         <div class="container-fluid d-flex flex-column min-vh-100" id="second-section">
-            <h3 class="text-center mt-5">Exemples de mise en page</h3>
+            <h3 class="text-center mt-5 mb-4">Exemples de mise en page</h3>
             <section class="row bg-light">
                 <div class="col-12 col-md-6 text-center my-4">
                     <img src="https://fakeimg.pl/300/" class="img-fluid">
