change background and add image style-1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- firs section -->
-        <div class="container-fluid d-flex flex-column min-vh-100" id="first-section">
+        <div class="container-fluid d-flex flex-column" id="first-section">
             <header class="text-center">
                 <h1>L'atelier des eaux</h1>
                 <p>Communication visuelle pour <wbr>particulier et entreprise</p>
@@ -82,13 +82,14 @@
         <!-- second section -->
         <div class="container-fluid d-flex flex-column min-vh-100" id="second-section">
             <h3 class="text-center mt-5 mb-4">Exemples de mise en page</h3>
-            <section class="row bg-light">
+            <section class="row" id="style-1">
                 <div class="col-12 col-md-6 text-center my-4">
-                    <img src="https://fakeimg.pl/300/" class="img-fluid">
+                    <img src="img/style-1.png" class="img-fluid">
+                    <!-- <img src="img/style-1-bottom.png" class="img-fluid"> -->
                 </div>
                 <div class="col-12 col-md-6 my-4">
-                    <h4 class="text-center mb-4">Style 1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h4 class="text-center mb-4">Besoin de quelqu'un pour illustrer vos envies ?</h4>
+                    <p>Que ce soit un dessin traditionnel ou numérique, mes illustrations vous permettront de mettre votre message en valeur d'un seul coup d'œil.<br>À partir d'une photo, d'un montage ou d'une simple idée, je saurais donner vie à vos projets.<br>Un portrait de famille personnalisé en cadeau de Noël, une affiche promotionnelle ou une emote de votre chat... Je suis à l'écoute de tous vos besoins !</p>
                 </div>
             </section>
             <section class="row flex-column-reverse flex-md-row">
