--- a/index.html
+++ b/index.html
@@ -1,129 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>L'atelier des eaux</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link href="style.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="img/logo.png" />
-    </head>
-    <body>
-        <!-- firs section -->
-        <div class="container-fluid d-flex flex-column" id="first-section">
-            <header class="text-center">
-                <h1>L'atelier des eaux</h1>
-                <p>Communication visuelle pour <wbr>particulier et entreprise</p>
-            </header>
-            <section>
-                <div class="row justify-content-center">
-                    <div id="carousel" class="carousel slide col-12 col-lg-8 col-xxl-5 p-0" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                            <button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                            <img src="img/img1.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                            </div>
-                            <div class="carousel-item">
-                            <img src="img/img2.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                            </div>
-                            <div class="carousel-item">
-                            <img src="img/img3.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                            </div>
-                            <div class="carousel-item">
-                            <img src="img/img4.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Fourth slide label</h5>
-                                <p>Some representative placeholder content for the Fourth slide.</p>
-                            </div>
-                            </div>
-                            <div class="carousel-item">
-                            <img src="img/img5.jpg" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Five slide label</h5>
-                                <p>Some representative placeholder content for the Five slide.</p>
-                            </div>
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
-                <div class="row text-center mt-5" id="coord">
-                    <h4>Marie Le Goff</h4>
-                    <p>Gueltas, 56930 Pluméliau-Bieuzy<br>latelierdeseaux@hotmail.com - 06 04 46 44 85<br><span>Ouvert du lundi au vendredi de 8h30 à 18h00</span></p>
-                </div>
-            </section>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin=""/>
+    <title>Give me weather</title>
+</head>
+<body>
+    <header>
+        <h1>Give me weather !</h1>
+    </header>
+    <section>
+        <p><strong>Rechercher ou cliquer sur la carte</strong></p>
+        <form>
+            <label for="search">Rechercher</label><input type="search" autocomplete="off" name="search" id="search" placeholder="rechercher un lieu">
+        </form>
+        <div id="autocomplete" class="hide">
+            <div>
+                <p>Cliquer sur une suggestion :</p>
+                <hr>
+            </div>
         </div>
-        <!-- second section -->
-        <div class="container-fluid d-flex flex-column min-vh-100" id="second-section">
-            <h3 class="text-center mt-5 mb-4">Exemples de mise en page</h3>
-            <section class="row" id="style-1">
-                <div class="col-12 col-md-6 text-center my-4">
-                    <img src="img/style-1.png" class="img-fluid">
-                    <!-- <img src="img/style-1-bottom.png" class="img-fluid"> -->
-                </div>
-                <div class="col-12 col-md-6 my-4">
-                    <h4 class="text-center mb-4">Besoin de quelqu'un pour illustrer vos envies ?</h4>
-                    <p>Que ce soit un dessin traditionnel ou numérique, mes illustrations vous permettront de mettre votre message en valeur d'un seul coup d'œil.<br>À partir d'une photo, d'un montage ou d'une simple idée, je saurais donner vie à vos projets.<br>Un portrait de famille personnalisé en cadeau de Noël, une affiche promotionnelle ou une emote de votre chat... Je suis à l'écoute de tous vos besoins !</p>
-                </div>
-            </section>
-            <section class="row flex-column-reverse flex-md-row">
-                <div class="col-12 col-md-6 my-4">
-                    <h4 class="text-center mb-4">Style 2</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                <div class="col-12 col-md-6 text-center my-4">
-                    <img src="https://fakeimg.pl/300/" class="img-fluid">
-                </div>
-            </section>
-            <section class="row bg-light">
-                <div class="col-12 col-md-6 text-center my-4">
-                    <img src="https://fakeimg.pl/300/" class="img-fluid">
-                </div>
-                <div class="col-12 col-md-6 my-4">
-                    <h4 class="text-center mb-4">Style 3</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-            </section>
-            <section class="row flex-column-reverse flex-md-row">
-                <div class="col-12 col-md-6 my-4">
-                    <h4 class="text-center mb-4">Style 4</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-                <div class="col-12 col-md-6 text-center my-4">
-                    <img src="https://fakeimg.pl/300/" class="img-fluid">
-                </div>
-            </section>
-        </div>
-        <!-- footer section -->
-        <footer class="container-fluid d-flex flex-column text-center fixed-bottom">
-            <p class="my-auto"><em>ici un footer de c'est mort</em></p>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+        <div id="map"></div>
+        <div id="weather"></div>
+    </section>
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
+    <script src="main.js"></script>
+</body>
 </html>
