Right name for search filter section

--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
                 <button type="submit" disabled>Rechercher</button>
                 <button type="submit" class="mobile" disabled><i class="fa fa-search"></i></button>
             </form>
-            <div class="flex flex-wrap" id="search-filters">
+            <div class="flex flex-wrap" id="search-filter">
                 <h2>Filtres</h2>
                 <ul class="flex flex-wrap">
-                    <li class="search-filter flex">
-                        <div class="search-filters-icon flex flex-center">
+                    <li class="search-filter-button flex">
+                        <div class="search-filter-icon flex flex-center">
                             <i class="fa-solid fa-money-bill-wave"></i>
                         </div>
                         <p>économique</p>
                     </li>
-                    <li class="search-filter flex">
-                        <div class="search-filters-icon flex flex-center">
+                    <li class="search-filter-button flex">
+                        <div class="search-filter-icon flex flex-center">
                             <i class="fa-solid fa-child-reaching"></i>
                         </div>
                         <p>familial</p>
                     </li>
-                    <li class="search-filter flex">
-                        <div class="search-filters-icon flex flex-center">
+                    <li class="search-filter-button flex">
+                        <div class="search-filter-icon flex flex-center">
                             <i class="fa-solid fa-heart"></i>
                         </div>
                         <p>romantique</p>
                     </li>
-                    <li class="search-filter flex">
-                        <div class="search-filters-icon flex flex-center">
+                    <li class="search-filter-button flex">
+                        <div class="search-filter-icon flex flex-center">
                             <i class="fa-solid fa-dog"></i>
                         </div>
                         <p>animaux autorisés</p>
