--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                     <i class="fa-solid fa-location-dot"></i>
                 </label>
                 <input type="search" name="search" id="search_input" placeholder="Entrer une localisation" value="Marseille, France">
-                <button type="submit" disabled>Rechercher</button>
-                <button type="submit" class="mobile" disabled><i class="fa fa-search"></i></button>
+                <button type="submit" disabled></button>
             </form>
             <div class="flex flex-wrap" id="search-filter">
                 <h2>Filtres</h2>
