home html skeleton

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
         <h1>Ohmyfood</h1>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque facilisis urna a enim pellentesque mattis non et risus. Phasellus enim ligula, rhoncus eget elementum sed, sagittis nec nibh. Sed maximus nisl nibh, tristique pretium erat dapibus at. Proin sagittis ac elit quis lobortis. Proin pellentesque sodales eros sit amet rutrum. Proin non ornare quam. Sed bibendum at velit vel blandit. Curabitur laoreet fermentum felis, eget dapibus ante pellentesque at. Quisque tortor felis, molestie a rutrum at, laoreet et tellus. Curabitur erat nibh, dapibus nec laoreet ac, interdum vel purus. Phasellus ac tortor sed lectus varius fringilla nec non est. Quisque lectus tortor, hendrerit vitae volutpat sit amet, tristique et ex. Nullam eu ornare orci, vestibulum posuere nulla. Cras sit amet tortor fermentum, malesuada metus non, suscipit lectus.</p>
+        <section class="location">
+
+        </section>
+        <section class="presentation">
+
+        </section>
+        <section class="working">
+
+        </section>
+        <section class="restaurants">
+
+        </section>
     </main>
     <footer >
     </footer>
