--- a/index.html
+++ b/index.html
@@ -7,27 +7,8 @@
     <link rel="stylesheet" href="css/normalize.css" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css" >
-    <title>Ohmyfood</title>
+    <title></title>
 </head>
 <body>
-    <header>
-        <h1>Ohmyfood</h1>
-    </header>
-    <main>
-        <section class="location">
-
-        </section>
-        <section class="presentation">
-
-        </section>
-        <section class="working">
-
-        </section>
-        <section class="restaurants">
-
-        </section>
-    </main>
-    <footer >
-    </footer>
 </body>
 </html>
