home location and presentation

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </header>
     <main>
         <section class="location">
-
+            <i class="fa-solid fa-location-dot"></i><p>Paris, Belleville</p>
         </section>
         <section class="presentation">
-
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exception, séléctionnés pour nos soins.</p>
+            <button>Explorer nos restaurants</button>
         </section>
         <section class="working">
 
